[project]
name = "parking"
version = "0.1.0"
description = ""
authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["numpy (>=2.3.2,<3.0.0)"]

[tool.poetry]
packages = [{ include = "parking", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
